kubes-cd/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubes-cd-ingress
  namespace: kubes-cd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ci.kubes-ci.com
    secretName: kubes-ci-tls
  rules:
  - host: ci.kubes-ci.com
    http:
      paths:
      - backend:
          serviceName: kubes-cd-controller
          servicePort: 80
